# agent-debugger

./: LICENSE  README.md  pyproject.toml
docs/superpowers/specs/: 2026-05-28-architecture-refactor-design.md
examples/: sample_claude_code.jsonl  sample_trace.json
src/agent_debugger/: __init__.py  __main__.py  cli.py  loader.py  schema.py
src/agent_debugger/adapters/: __init__.py  base.py  claude_code.py
src/agent_debugger/analysis/: __init__.py  analyzer.py
src/agent_debugger/core/: __init__.py  loader.py  schema.py
src/agent_debugger/ui/: cli.py
tests/: test_analyzer.py  test_claude_code_adapter.py  test_cli.py  test_loader.py  test_schema.py
