[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-debugger"
version = "0.1.0"
description = "Interactive debugger for AI Agent loops — timeline, context window analysis, breakpoints & replay"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "liwh9527" }]
keywords = ["ai", "agent", "debugger", "llm", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
agent-debugger = "agent_debugger.ui.cli:main"

[project.urls]
Homepage = "https://github.com/liwh9527/agent-debugger"
Repository = "https://github.com/liwh9527/agent-debugger"
Issues = "https://github.com/liwh9527/agent-debugger/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
